--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -3,15 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Words and Synonyms</title>
-
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <script src="js/bootstrap.min.js"></script>
-
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/script.js"></script>
 </head>
 <body>
     <h1>Words and Synonyms</h1>
@@ -21,5 +14,12 @@
     <div id="notInDatabaseInfo"></div>
 
     <ul id="searchResultsList"></ul>
+    
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/modal.js"></script>
+    <script src="js/service.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
